/*
 * $Id: ChangeLog,v 1.1453 2003/09/12 02:09:32 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-12 04:26 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/memvars.c
    ! fixed windows compilation

2003-09-11 04:10 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/hvm.c
  * source/vm/memvars.c
    ! fixed memvar access under MT.

  * tests/mtstress.prg
    + added tests for memvars

2003-09-11 18:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/clipsamp/gauge.c
    * szPct buffer needs to be 5 characters, not 4

2003-09-11 21:57 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_rpm.sh
    + PLD distro added
    - removed Luiz hack for bug in Conectiva Linux RPM - it breaks
      compilation from non root account.
    + added other hack :-) for buggy RPM which should resolve this
      problem. Please test.

  * xharbour/make_tgz.sh
    + PLD distro added
  * xharbour/xharbour.spec
    + PLD distro added

  * xharbour/xhbgtmk.sh
    * slang_devel removed from necessary dependences, GTSLN won't
      compile on new RH with its slang-devel so we shouldn't make
      people to install it. It doesn't disable GTSLN compilation
      if proper sland-devel exists in a system

  * xharbour/source/vm/proc.c
    * strcat replaced by strncpy to eliminate GPF in my system
      when called from hb_arrayResetHolder()

2003-09-11 10:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
    + Added explicit HB_IS_MEMVAR() support to hb_arrayReleaseGarbage() utilizing hb_memvarValueDecGarbageRef()

  * source/vm/memvars.c
    + Added explict HB_IS_ARRAY() support to hb_memvarValueDecGarbageRef() utilizing hb_arrayReleaseHolderGarbage().

2003-11-09 12:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  *  xharbour.spec