@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1453 2003/09/12 02:09:32 jonnymind Exp $
+ * $Id: ChangeLog,v 1.1454 2003/09/12 02:26:58 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-09-12 08:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * xharbour/source/vm/proc.c
+    * Fixed 2 possible GPF traps.
 
 2003-09-12 04:26 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
   * source/vm/memvars.c
